--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "browser": "dist/TidSearch.js",
   "scripts": {
     "build": "npx babel src --out-dir dist",
-    "test": "echo There is no test. Make myself happy :D "
+    "test": "npm run build"
   },
   "files": [
     "dist",
