--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/Wybxc/TidSearch",
   "devDependencies": {
+    "npx":"^6.14.4",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.9.5"
